--- a/.env
+++ b/.env
@@ -18,8 +18,8 @@ CITY=Atlanta
 # Database configurations
 #
 POSTGRES_DB=rengine
-POSTGRES_USER=rengine
-POSTGRES_PASSWORD=hE2a5@K&9nEY1fzgA6X
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin123
 POSTGRES_PORT=5432
 POSTGRES_HOST=db
 
